Se agrego botón y formulario

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Titulo Nuevo Modificado!</h1>
     <h2>Holaaa</h2>
+
+    <form action="#" method="get"></form>
+    <input type="button" value="Enviar">
 </body>
 </html>
