Se modifico index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <h1>Titulo Nuevo Modificado!</h1>
     <h2>Holaaa</h2>
 
-    <form action="#" method="get"></form>
-    <input type="text" name="firstname" id="firstname"
-    <input type="button" value="Enviar">
+    <form action="#" method="get">
+    <input type="text" name="firstname" id="firstname">
+  <input type="button" value="Enviar">
+</form>
 </body>
 </html>
