--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Holaaa</h2>
 
     <form action="#" method="get"></form>
+    <input type="text" name="firstname" id="firstname">
     <input type="button" value="Enviar">
 </body>
 </html>
