--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <form action="#" method="get"></form>
     <input type="text" name="firstname" id="firstname">
+    <input type="text" name="lastname" id="lastname">
+
     <input type="button" value="Enviar">
 </body>
 </html>
