--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <form action="#" method="get"></form>
     <input type="text" name="firstname" id="firstname">
     <input type="text" name="lastname" id="lastname">
+    <input type="number" name="age" id="age">
+
 
     <input type="button" value="Enviar">
 </body>
