--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <h2>Holaaa</h2>
 
     <form action="#" method="get"></form>
-    <input type="text" name="firstname" id="firstname">
+    <input type="number" name="firstname" id="firstname">
     <input type="text" name="lastname" id="lastname">
     <input type="number" name="age" id="age">
-
-
     <input type="button" value="Enviar">
 </body>
 </html>
