Se cambio text a texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Holaaa</h2>
 
     <form action="#" method="get"></form>
-    <input type="text" name="firstname" id="firstname">
+    <input type="texto" name="firstname" id="firstname">
     <input type="text" name="lastname" id="lastname">
     <input type="number" name="age" id="age">
 
