Se agrego funcionalidad imagen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form action="#" method="get">
     <input type="text" name="firstname" id="firstname">
   <input type="button" value="Enviar">
+  <img src="#" alt="Test img"/>
 </form>
 </body>
 </html>
